@@ -3,6 +3,7 @@ cm4all-beng-proxy (0.6.15) unstable; urgency=low
   * http-cache-choice: find more duplicates during cleanup
   * handler: added AJP handler
   * ajp-request: unref pool only on tcp_stock failure
+  * ajp-client: prevent parser recursion
 
  --
 
